--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<main>main태그 입니다.</main>
+<main>
+  <div>div태그 입니다.</div>
+</main>
 <body>
   
 </body>
